syntax = "proto3";

package userPackage;

service User {
    rpc list(voidRequest) returns (listUsersResponse);
    rpc getUserByUsername (getUserByUsernameRequest) returns (getUserByUsernameResponse);
    rpc verifyPassword (verifyPasswordRequest) returns (verifyPasswordResponse);
}
message voidRequest {

}

message getUserByUsernameRequest{
string username =1;
}

message getUserByUsernameResponse{
string username=1;
string email =2;
}

message verifyPasswordRequest{
string password =1;
}

message verifyPasswordResponse{
bool valid=1;
}

message userRequest {
    string _id =1;
    string name =2;
    int32 price =3;
}

message userResponse {
    string email =1;
}

message listUsersResponse {
    repeated userResponse users = 1;
}


